--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: coingecko_dart
 description: A Dart/Flutter Wrapper for the CoinGecko API (V3)
-version: 0.0.5
+version: 0.0.6
 homepage: https://github.com/TheAnimatrix/coingecko_dart
 
 environment:
@@ -9,4 +9,5 @@ environment:
 dependencies:
   dio: ^4.0.0
   intl: ^0.17.0
+  quiver: ^3.0.1
   test: ^1.16.0
